Update follow requirement of changing from Udacity

--- a/Writing a Data Scientist Blog Post/Writing a Data Scientist Blog Post.ipynb
+++ b/Writing a Data Scientist Blog Post/Writing a Data Scientist Blog Post.ipynb
@@ -20,6 +20,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "203140d7",
+   "metadata": {},
+   "source": [
+    "# Business Understanding\n",
+    "Every year, stackoverflow conducts a lot of surveys in their user groups. \n",
+    "These surveys include information about programming languages, job satisfaction, and much more. \n",
+    "Motivation behind this project, using Stack Overflow Developer Survey 2017 data to answer 6 questions:\n",
+    "\n",
+    "1. Which countries are surveyed the most?\n",
+    "2. What are the most popular programming languages?\n",
+    "3. In each country, which programming language is most popular?\n",
+    "4. How are job satisfaction ratings in each country?\n",
+    "5. What are the popular programming languages in Vietnam?\n",
+    "6. What is the level of job satisfaction in Vietnam, Denmark, and Israel based on employment status?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0e0c3f50",
@@ -370,6 +388,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4538a6ed",
+   "metadata": {},
+   "source": [
+    "# Data Exploration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "951c7eb3",
@@ -401,6 +427,14 @@
     "# Top 10 columns with missing value\n",
     "missing_cols = public_df.isnull().mean()\n",
     "missing_cols.sort_values(ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6c37275",
+   "metadata": {},
+   "source": [
+    "## Handle missing values is important part in DS project. But in this project, The missing value will be processed based on requirements of each question"
    ]
   },
   {
@@ -633,6 +667,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbd982fb",
+   "metadata": {},
+   "source": [
+    "# Question 1: Which countries are surveyed the most?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "44e28e00",
@@ -669,6 +711,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "60d483cc",
+   "metadata": {},
+   "source": [
+    "We see that the majority of the stackoverflow survey is with American developers. India, the UK and Germany are next. Therefore, survey results in the US will have higher reliability than in other countries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39febe83",
+   "metadata": {},
+   "source": [
+    "# Question 2: What are the most popular programming languages?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "93d5cc50",
@@ -688,6 +747,7 @@
     }
    ],
    "source": [
+    "# Drop missing value in HaveWorkedLanguage column\n",
     "programming_lang_df = public_df.dropna(subset=[\"HaveWorkedLanguage\"])\n",
     "programming_lang_df[\"HaveWorkedLanguage\"] = programming_lang_df[\"HaveWorkedLanguage\"].apply(lambda x: str(x).split(\"; \"))"
    ]
@@ -806,6 +866,23 @@
     "ax.set_xlabel(xlabel='Count', fontsize=12)\n",
     "ax.set_ylabel(ylabel='Programming Languages', fontsize=12)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b13a23a9",
+   "metadata": {},
+   "source": [
+    "Top 10 most popular languages include: Javascript, SQL, Java, C#, Python, PHP, C++, C, TypeScript, and Ruby."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d9fbf74",
+   "metadata": {},
+   "source": [
+    "# Question 3: In each country, which programming language is most popular?"
    ]
   },
   {
@@ -962,6 +1039,15 @@
     "# Top 1 programming language in each country\n",
     "\n",
     "def extract_lang(x):\n",
+    "    \"\"\"\n",
+    "    Apply function to extract values from combined cell values.\n",
+    "  \n",
+    "    Parameters:\n",
+    "    x (GroupByDataFrame): Groupby data Frame\n",
+    "  \n",
+    "    Returns:\n",
+    "    DataFrame: Include programming language, count, All Programming Languages columns\n",
+    "    \"\"\"\n",
     "    sorted_pl = sorted(dict(Counter(list(itertools.chain(*x)))).items(), key=lambda x: x[1])\n",
     "    return pd.DataFrame([{\"Programming Language\": sorted_pl[-1][0], \"Count\": sorted_pl[-1][1], \"All Programming Languages\": sorted_pl}])\n",
     "    \n",
@@ -976,6 +1062,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "countries_dict = dict([('Iran', 'IRN'),\n",
     " ('Czech Republic', 'CZE'),\n",
     " ('I prefer not to say', None),\n",
@@ -1027,7 +1114,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "1b4eadb1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1059,6 +1148,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f05e851c",
+   "metadata": {},
+   "source": [
+    "In each country, which programming language is most popular?\n",
+    "We see that Javascript is the most popular language in most countries in the world. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fce01ab5",
+   "metadata": {},
+   "source": [
+    "# Question 5: What are the popular programming languages in Vietnam?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "f18030a3",
@@ -1087,6 +1195,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6d85ce01",
+   "metadata": {},
+   "source": [
+    "In Vietnam, the most popular language is also Javascript. The top 10 most popular languages in the world are also popular programming languages in Vietnam, but they change in the order of arrangement."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e797eaa9",
+   "metadata": {},
+   "source": [
+    "# Question 4: How are job satisfaction ratings in each country?!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "9bb74e9e",
@@ -1108,9 +1234,11 @@
    "source": [
     "# Job satisfaction of developers at top 60 surveyed countries in 2017\n",
     "# How much do developers satisfied with their jobs in the countries?\n",
+    "\n",
     "countries_60_list = list(surveyed_df.head(61)[\"Country\"].values)\n",
     "countries_60_list.remove(\"I prefer not to say\")\n",
     "countries_60_list = countries_60_list[:60]\n",
+    "# Drop missing value in JobSatisfaction column\n",
     "satisfy_surveyed_df = public_df[public_df.Country.isin(countries_60_list)].dropna(subset=[\"JobSatisfaction\"])\n",
     "\n",
     "\n",
@@ -1127,6 +1255,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0d449441",
+   "metadata": {},
+   "source": [
+    "Israel and Denmark have the highest job satisfaction ratings of 7.57. Meanwhile, Japan is in the last position with 5.83 points, lower than Vietnam with 6.72 points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "ba3d8f5a",
@@ -1137,6 +1274,15 @@
     "# Finland follows with a 7.53 job satisfaction rating.\n",
     "# Vietnam rows at No 40 in the list.\n",
     "# Japan locates at the bottom with 5.83"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0c41c50e",
+   "metadata": {},
+   "source": [
+    "# Question 6: What is the level of job satisfaction in Vietnam, Denmark, and Israel based on employment status?"
    ]
   },
   {
@@ -1173,17 +1319,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3928449",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0908cdf3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Overall, the level of job satisfaction in each employment status is the same in all three countries. Users are most satisfied with an independent contractor, freelancer, or self-employed job, followed by a full-time job and finally a part-time job. But in Demark, the level of job satisfaction is almost the same. Very different from Israel and Vietnam. There is a clear disparity between the states."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58f9dbfc",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "58b95711",
+   "metadata": {},
+   "source": [
+    "In this article, for the first 4 questions, we will perform a few steps of data exploration. In the following two questions, we find out what are the characteristics of programming languages and programming jobs in Vietnam compared with other countries. In general, users in Vietnam also have common and unique characteristics compared to other countries; for example, the top 10 popular programming languages in the world are also popular in Vietnam. The difference is that Vietnamese people tend to work with more server-side languages such as Java, C#, C, C++, SQL, etc. The level of job satisfaction is average compared to other countries. In addition, the point that surprises us is that the level of job satisfaction in Japan is the lowest in the world.!"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63ebd1d5",
+   "id": "0753657d",
    "metadata": {},
    "outputs": [],
    "source": []
